# knowledge-loom

./: .gitignore  .loomignore  .mcp.json  AGENTS.md  Architecture.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  about.toml  deny.toml  install.sh  kb_core.py  kb_mcp.py  loom_mcp.py  requirements.txt  rustfmt.toml  test_hub.py
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
benches/: bm25_bench.rs  chunk_bench.rs
docs/superpowers/plans/: 2026-05-03-loom-hub.md
docs/superpowers/specs/: 2026-05-03-loom-hub-design.md
examples/: bench_embed.rs  test_search.rs
legacy/: lore_mcp.py
scripts/: install-binary.sh  verify_coverage.sh
specs/001-full-functionality-implementation/: constitutional-issues-resolution.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-full-functionality-implementation/checklists/: requirements.md
specs/001-full-functionality-implementation/contracts/: embedding-provider.md
specs/002-init-root-auto/: spec.md
specs/002-init-root-auto/checklists/: requirements.md
specs/003-safe-chunk-indexing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-safe-chunk-indexing/checklists/: implementation.md  requirements.md
specs/003-safe-chunk-indexing/contracts/: chunk-retrieval.md
specs/004-init-model-download/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-init-model-download/checklists/: requirements.md
specs/004-init-model-download/contracts/: api-model-download.md  cli-init.md  display-progress.md
specs/005-install-file-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-install-file-structure/checklists/: requirements.md
specs/005-install-file-structure/contracts/: cli-install.md
specs/006-fix-mcp-tool/: plan.md  spec.md  tasks.md
specs/007-fix-grep-whole-file/: data-model.md  feature.json  plan.md  research.md  spec.md  tasks.md
specs/007-fix-grep-whole-file/checklists/: requirements.md
specs/008-integrate-turbovec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-integrate-turbovec/checklists/: requirements.md
specs/009-docs-ci-cleanup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-docs-ci-cleanup/checklists/: requirements.md
specs/010-fix-ci-test-vault/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: bm25.rs  brainjar.rs  chunks.rs  daemon.rs  download.rs  edits.rs  graph.rs  index.rs  init.rs  install.rs  lib.rs  main.rs  maintenance.rs  model.rs  platforms.rs  search.rs  server.rs  shell.rs  turbovec_index.rs  vault.rs  web.rs
src/cli/: args.rs  mod.rs
src/download/: utils.rs
src/embed/: error.rs  local.rs  mod.rs  ollama.rs  openrouter.rs
tests/: behavioral_tests.rs  benchmarks.rs  bm25_lock_tests.rs  bm25_tests.rs  brainjar_tests.rs  chunks_tests.rs  content_agnostic_tests.rs  daemon_tests.rs  download_integration_tests.rs  download_tests.rs  download_utils_tests.rs  e2e_daemon_state_tests.rs  e2e_full_pipeline_tests.rs  e2e_helpers.rs  e2e_init_tests.rs  e2e_install_tests.rs  e2e_serve_tests.rs  e2e_shell_tests.rs  e2e_turbovec_tests.rs  embed_batch_tests.rs  embed_tests.rs  graph_fused_search_tests.rs  graph_tests.rs  init_tests.rs  install_benchmark.rs  install_integration.rs  install_tests.rs  integration.rs  mcp_protocol_tests.rs  model_tests.rs  platforms_tests.rs  reindex_perf_tests.rs  reindex_state_tests.rs  rename_tests.rs  search_tests.rs  server_tests.rs  shell_tests.rs  turbovec_index_tests.rs  vault_tests.rs  vector_tests.rs  (+1 more)
(+3 files in other folders)
