[package]
name = "knowledge-loom"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
tantivy = "0.18"  # Using older version with stable API
petgraph = { version = "0.6", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
reqwest = { version = "0.12", features = ["json", "default-tls"] }
pulldown-cmark = "0.10"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "fs", "signal"] }
ignore = "0.4"
bincode = "1.3"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
bytemuck = "1.14"
tracing = "0.1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"

[dev-dependencies]
tempfile = "3.10"
bytemuck = "1.14"

[features]
ollama_tests = []