[package]
name = "knowledge-loom"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "loom"
path = "src/main.rs"

[[bench]]
name = "chunk_bench"
harness = false

[[bench]]
name = "bm25_bench"
harness = false

[dependencies]
fastembed = "4"
tantivy = "0.26"  # Upgraded to fix lz4_flex vulnerability
petgraph = { version = "0.6", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
reqwest = { version = "0.12", features = ["json", "default-tls"] }
pulldown-cmark = "0.10"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "fs", "signal"] }
ignore = "0.4"
bincode = "1.3"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bytemuck = "1.14"
tracing = "0.1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"
toml = "0.8"
dirs = "5"
notify = "6"
axum = "0.7"
tower = "0.4"
sha2 = "0.10"
chrono = "0.4"
fs2 = "0.4"
signal-hook = "0.3"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
bytemuck = "1.14"
axum-test = "15"
criterion = "0.5"
serial_test = "3.0"

[features]
ollama_tests = []

# Clippy configuration
[lints.clippy]
# Allow missing documentation during development
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow complex types and transmute for now (would require significant refactoring)
type_complexity = "allow"
missing_transmute_annotations = "allow"
should_implement_trait = "allow"